gtkpod V0.82-CVS
	BUGFIX: when writing tags to file the track tag was
	deleted.

	BUGFIX: handling of orphaned tracks that had been added to the
	ipod again are now handled correctly.

	BUGFIX: fixed case-sensitivity issue while handling orphaned
	tracks.

	BUGFIX: fixed bug that caused gtkpod to hang when activating
	duplicate detection without having the list of duplicates
	displayed (must have been around ever since duplicate
	detection was introduced...)

	BUGFIX: gain tags written by mp3gain were never read
	correctly. Normalization using mp3gain was therefore
	impossible. Didn't anyone ever use that feature?!

	BUGFIX: when copying track to the iPod, the free space
	indication became bigger and bigger during the process.

	NEW FEATURE: support for On-The-Go Playlists. They will show
	up as "OTG Playlist 1" etc.

	NEW FEATURE: export of PLS or M3U file including meta data.
	
	NEW FEATURE: registering playcounts when tracks are played on
	the local machine is now possible (actually it was already
	possible in V0.80, but now the README explains how to do it).

	NEW FEATURE: Swedish translation provided by Stefan Asserhäll.

	IMPROVEMENT: Speeded up writing of iTunesDB. For me it is now
	between 1 and 15 seconds instead of between 20 and 40 seconds
	before (for security I'm using the iPod as a non-buffered
	device). A back-upped version of the iTunesDB is now always
	written to ~/.gtkpod.

	IMPROVEMENT: Moved some options from the preferences dialog to
	the file chooser dialog where you need them. gtkpod now
	requires GTK2.4 to compile.

	IMPROVEMENT: Added "Time Created" support to special sorttab,
	track display and iTunesDB. (Before only "modified" and
	"played" were supported.)

	IMPROVEMENT: All information stored in the iTunesDB about
	tracks is read and written, even if the information itself is
	not used by gtkpod itself.

	IMPROVEMENT: Added new track information fields: iPod_Path,
	creation time, soundcheck, samplerate, "BPM"
