@@ -1,5 +1,8 @@
 TODO:
 
+- Give status when adjusting offline_playcount after import of
+  database (can take quite a while even for only 90 tracks).
+
 - Ignore common words when sorting
 
   > I'm somewhat frustrated with the inconsistency between GTKPod and
