@@ -5,7 +5,7 @@ AM_CFLAGS = @PACKAGE_CFLAGS@
 INCLUDES = @PACKAGE_CFLAGS@ \
 	   -DMOUNT_BIN=\""@MOUNT@\"" \
 	   -DUMOUNT_BIN=\""@UMOUNT@\"" \
-	   -DPKGDATADIR=\""$(pkgdatadir)\"" \
+	   -DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	   -DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" 
 
 bin_PROGRAMS = gtkpod
