@@ -65,7 +65,9 @@ main (int argc, char *argv[])
 
   gtk_init (&argc, &argv);
 
-  add_pixmap_directory (PKGDATADIR G_DIR_SEPARATOR_S "pixmaps");
+  add_pixmap_directory (PACKAGE_DATA_DIR G_DIR_SEPARATOR_S PACKAGE G_DIR_SEPARATOR_S "pixmaps");
+
+  add_pixmap_directory (PACKAGE_DATA_DIR G_DIR_SEPARATOR_S "pixmaps");
 
   srand(time(NULL));
 
